{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 59,
  "lineage": "360b6a6b-4b53-039f-17d9-d08a5f1f275e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-091d9b34b691a489c",
            "arn": "arn:aws:ec2:us-east-1:951845434705:instance/i-01bd7162bff9b9bbb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01bd7162bff9b9bbb",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0140bed6f0f50494c",
            "private_dns": "ip-192-168-4-180.ec2.internal",
            "private_ip": "192.168.4.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 105,
                "throughput": 0,
                "volume_id": "vol-09eaae5a28fe0982b",
                "volume_size": 35,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fef947a0846a100a",
            "tags": {
              "CreatedAt": "2021-10-10",
              "ManagedBy": "Terraform",
              "Name": "Jenkins Machine",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07afb8791044c5314"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "aws_security_group.jenkins",
            "aws_security_group.web",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951845434705:internet-gateway/igw-05d1d1c3521d66e99",
            "id": "igw-05d1d1c3521d66e99",
            "owner_id": "951845434705",
            "tags": {
              "CreatedAt": "2021-10-10",
              "ManagedBy": "Terraform",
              "Name": "Terraform IGW ",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-04e9f785b81a3a64c"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:951845434705:loadbalancer/app/Terraform-ALB/60043f1d347f9023",
            "arn_suffix": "app/Terraform-ALB/60043f1d347f9023",
            "dns_name": "Terraform-ALB-1652974604.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:951845434705:loadbalancer/app/Terraform-ALB/60043f1d347f9023",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Terraform-ALB",
            "security_groups": [
              "sg-0a5b54a3915457205"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07080434152c00110"
              },
              {
                "subnet_id": "subnet-0c161939379480324"
              }
            ],
            "subnets": [
              "subnet-07080434152c00110",
              "subnet-0c161939379480324"
            ],
            "tags": {
              "CreatedAt": "2021-10-10",
              "ManagedBy": "Terraform",
              "Name": "Terraform ALB",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-04e9f785b81a3a64c",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:951845434705:listener/app/Terraform-ALB/60043f1d347f9023/91a0ffc79fdec374",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:951845434705:targetgroup/ALB-TG/413150698453ac88",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:951845434705:listener/app/Terraform-ALB/60043f1d347f9023/91a0ffc79fdec374",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:951845434705:loadbalancer/app/Terraform-ALB/60043f1d347f9023",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.this",
            "aws_vpc.this",
            "aws_lb.this",
            "aws_lb_target_group.this",
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:951845434705:targetgroup/ALB-TG/413150698453ac88",
            "arn_suffix": "targetgroup/ALB-TG/413150698453ac88",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:951845434705:targetgroup/ALB-TG/413150698453ac88",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04e9f785b81a3a64c"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06cbe511e1c44c4c5",
            "owner_id": "951845434705",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CreatedAt": "2021-10-10",
              "ManagedBy": "Terraform",
              "Name": "Terraform Private",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-04e9f785b81a3a64c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00988848872681dc1",
            "owner_id": "951845434705",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05d1d1c3521d66e99",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedAt": "2021-10-10",
              "ManagedBy": "Terraform",
              "Name": "Terraform Public",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-04e9f785b81a3a64c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Private A",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090e9764c80adcbcf",
            "route_table_id": "rtb-06cbe511e1c44c4c5",
            "subnet_id": "subnet-08738982b7c3271de"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this",
            "aws_internet_gateway.this"
          ]
        },
        {
          "index_key": "Private B",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ceb4c913de93418",
            "route_table_id": "rtb-06cbe511e1c44c4c5",
            "subnet_id": "subnet-0fef947a0846a100a"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this",
            "aws_internet_gateway.this"
          ]
        },
        {
          "index_key": "Public A",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e30ae480d11c2d7",
            "route_table_id": "rtb-00988848872681dc1",
            "subnet_id": "subnet-0c161939379480324"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this",
            "aws_internet_gateway.this",
            "aws_route_table.private"
          ]
        },
        {
          "index_key": "Public B",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00880b5b2d77df90d",
            "route_table_id": "rtb-00988848872681dc1",
            "subnet_id": "subnet-07080434152c00110"
          },
          "dependencies": [
            "aws_vpc.this",
            "aws_internet_gateway.this",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951845434705:security-group/sg-0a5b54a3915457205",
            "description": "Load Balancer SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5b54a3915457205",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ALB-SG",
            "name_prefix": "",
            "owner_id": "951845434705",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2021-10-10",
              "ManagedBy": "Terraform",
              "Name": "Load Balancer",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e9f785b81a3a64c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "autoscaling",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951845434705:security-group/sg-0faef5f8014f4009c",
            "description": "Security group that allows ssh/http and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0faef5f8014f4009c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a5b54a3915457205"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "autoscaling",
            "name_prefix": "",
            "owner_id": "951845434705",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2021-10-10",
              "ManagedBy": "Terraform",
              "Name": "Auto Scaling",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e9f785b81a3a64c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951845434705:security-group/sg-0fc7b300745a05829",
            "description": "Allow public inbound traffic",
            "egress": [],
            "id": "sg-0fc7b300745a05829",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0074f00e4b705925d"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "DB",
            "name_prefix": "",
            "owner_id": "951845434705",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2021-10-10",
              "ManagedBy": "Terraform",
              "Name": "Database PostgreSQL",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e9f785b81a3a64c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951845434705:security-group/sg-07afb8791044c5314",
            "description": "Allow incoming connections to Jenkins machine",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0074f00e4b705925d"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-07afb8791044c5314",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Jenkins",
            "name_prefix": "",
            "owner_id": "951845434705",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2021-10-10",
              "ManagedBy": "Terraform",
              "Name": "Jenkins Machine",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e9f785b81a3a64c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this",
            "aws_security_group.web",
            "aws_subnet.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951845434705:security-group/sg-0074f00e4b705925d",
            "description": "Allow public inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "192.168.3.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-0074f00e4b705925d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Web",
            "name_prefix": "",
            "owner_id": "951845434705",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2021-10-10",
              "ManagedBy": "Terraform",
              "Name": "Web Server",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e9f785b81a3a64c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951845434705:subnet/subnet-0c161939379480324",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0c161939379480324",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "951845434705",
            "tags": {
              "CreatedAt": "2021-10-10",
              "ManagedBy": "Terraform",
              "Name": "Public A",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-04e9f785b81a3a64c"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "pub_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951845434705:subnet/subnet-07080434152c00110",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-07080434152c00110",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "951845434705",
            "tags": {
              "CreatedAt": "2021-10-10",
              "ManagedBy": "Terraform",
              "Name": "Public B",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-04e9f785b81a3a64c"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "pvt_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951845434705:subnet/subnet-08738982b7c3271de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-08738982b7c3271de",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "951845434705",
            "tags": {
              "CreatedAt": "2021-10-10",
              "ManagedBy": "Terraform",
              "Name": "Private A",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-04e9f785b81a3a64c"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "pvt_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951845434705:subnet/subnet-0fef947a0846a100a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-0fef947a0846a100a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "951845434705",
            "tags": {
              "CreatedAt": "2021-10-10",
              "ManagedBy": "Terraform",
              "Name": "Private B",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-04e9f785b81a3a64c"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951845434705:vpc/vpc-04e9f785b81a3a64c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0dc40f40ce25dc4e7",
            "default_route_table_id": "rtb-0c06817ace677ff91",
            "default_security_group_id": "sg-046c5c73a03175a94",
            "dhcp_options_id": "dopt-04d37621f7fd49ff2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04e9f785b81a3a64c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c06817ace677ff91",
            "owner_id": "951845434705",
            "tags": {
              "CreatedAt": "2021-10-10",
              "ManagedBy": "Terraform",
              "Name": "Terraform VPC ",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            }
          }
        }
      ]
    }
  ]
}